# depends

./: README.markdown  depends.cabal
src/: Cabal.hs  Config.hs  GhcPkg.hs  Main.hs  Run.hs
test/: CabalSpec.hs  ConfigSpec.hs  GhcPkgSpec.hs  Helper.hs
test/fixtures/: dependencies-with-name.yaml  dependencies-with-test.yaml  dependencies.yaml  ghc-pkg_field_hspec-1.8.0_depends
