name:             depends
version:          0.0.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2013 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8

executable depends
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  main-is:
      Main.hs
  build-depends:
      base    == 4.*
    , process
    , containers
    , mtl

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      src, test
  main-is:
      Spec.hs
  build-depends:
      base    == 4.*
    , process
    , containers
    , mtl

    , hspec   >= 1.3
    , QuickCheck
